[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bone-mechanoregulation"
version = "0.1.0"
description = "Post-timelapse mechanoregulation addon for HR-pQCT datasets"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{name = "Matthias Walle"}]
dependencies = [
  "numpy>=1.26,<2.0; python_version < '3.13'",
  "numpy>=2.1,<3.0; python_version >= '3.13'",
  "matplotlib>=3.7",
  "parosol-py>=0.1.13",
  "scipy>=1.10",
  "SimpleITK>=2.2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/wallematthias/BoneMechanoregulation"
Issues = "https://github.com/wallematthias/BoneMechanoregulation/issues"

[project.scripts]
mechanoregulation = "bonemechreg.cli:main"

[tool.setuptools.packages.find]
include = ["bonemechreg*"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
